# wind-lang-rs

./: .gitignore  Cargo.toml  grammer.txt
examples/: calculator.wind  closures.wind  even.wind  fib.wind  for.wind  for_range.wind  functions.wind  if.wind  input.wind  math.wind  while.wind
src/: ast.rs  error.rs  interpreter.rs  main.rs  parser.rs  scanner.rs  token.rs  types.rs
src/interpreter/: environment.rs  stdlib.rs
