[package]
name = "wind-lang"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pprof = { version="0.5.0", features = ["flamegraph", "protobuf"] }
enum-as-inner = "0.3.3"
fnv = "1.0.3"
clap = "3.0.0-beta.5"